--- a/bower.json
+++ b/bower.json
@@ -9,5 +9,8 @@
     "angular": "~1.2.18",
     "angular-ui-router": "~0.2.11",
     "angular-google-maps": "~2.0.7"
+  },
+  "resolutions": {
+    "angular": "~1.3.15"
   }
 }
