--- a/bower.json
+++ b/bower.json
@@ -6,11 +6,18 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "angular": "~1.2.18",
+    "angular-rangeslider": "~0.0.7",
+    "angular-ui-select": "~0.8.3",
     "angular-ui-router": "~0.2.11",
-    "angular-google-maps": "~2.0.7"
+    "angular-google-maps": "~2.3.2",
+    "angular-animate": "~1.5.2",
+    "ui-bootstrap": "~1.2.5",
+    "angular-bootstrap": "~1.2.5",
+    "ng-sortable": "~1.3.3",
+    "angular-filter": "~0.5.8",
+    "flexibility": "~1.0.6"
   },
   "resolutions": {
-    "angular": "~1.3.15"
+    "angular": "1.5.*"
   }
 }
