--- a/mapotron2/app.yaml
+++ b/mapotron2/app.yaml
@@ -1,5 +1,11 @@
 runtime: python38
 service: earthenv
+
 handlers:
-    - url: /static/
-        static_dir: static
+- url: /static/
+  static_dir: static
+
+- url: /.*
+  secure: always
+  redirect_http_response_code: 301
+  script: auto
