--- a/mapotron2/requirements.txt
+++ b/mapotron2/requirements.txt
@@ -1,8 +1,10 @@
 # uwsgi==2.0.18
-Flask==1.1.1
-flask-cors==3.0.8
-earthengine-api==0.1.237 
+Flask==1.1.2
+flask-cors==3.0.10
+# google-api-python-client==1.12.8
+# earthengine-api==0.1.250 
+earthengine-api==0.1.266 
 # google-cloud-datastore==1.10.0
 # google-cloud-storage==1.18.0
-backoff==1.8.0
-requests==2.22.0
+backoff==1.10.0
+requests==2.25.1
