--- a/mapotron2/static/config.json
+++ b/mapotron2/static/config.json
@@ -4,7 +4,7 @@
       "id": "mountains", 
       "title": "GMBA Mountain Inventory v2", 
       "features": [{
-          "id": "projects/map-of-life/regional/GMBA/v2/inventory_v2_select300_20210916", 
+          "id": "projects/map-of-life/regional/GMBA/v2/inventory_v203_standard_300", 
           "viz_params": {
               "min": 1,
               "max": 6,
@@ -14,9 +14,10 @@
           "show": true, 
           "opacity": 0.55,
           "title": "Large scale (300 selection)", 
-          "index": 1
+          "index": 1,
+          "info": "Subset of 291 ('Standard') and 292 ('Broad') non overlapping major mountain systems and ranges"
       }, {
-          "id": "projects/map-of-life/regional/GMBA/v2/inventory_v2_basic_20210916", 
+          "id": "projects/map-of-life/regional/GMBA/v2/inventory_v203_standard_basic", 
           "viz_params": {
               "min": 1,
               "max": 6,
@@ -26,7 +27,8 @@
           "show": true, 
           "opacity": 0.85,
           "title": "Fine scale (Basic)", 
-          "index": 0
+          "index": 0,
+          "info": "Subset of 6719 smallest non-overlapping mapping units of the inventory, i.e. those having no 'child' sub-range"
       }]
   },
     {
