--- a/mapotron2/requirements.txt
+++ b/mapotron2/requirements.txt
@@ -1,5 +1,7 @@
 # uwsgi==2.0.18
-Flask==1.1.2
+Flask==1.1.4
+markupsafe==2.0.1
+
 flask-cors==3.0.10
 # google-api-python-client==1.12.8
 # earthengine-api==0.1.250 
